--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,31 +34,35 @@ jobs:
           command: |
             #set +e
             ./ubiquitous_bash.sh _false
+          when: on_success
       - run:
           name: _getMinimal_cloud
           shell: /bin/bash -o pipefail
           command: |
             #set +e
             ./ubiquitous_bash.sh _getMinimal_cloud
-          when: always
+          when: on_success
       - run:
           name: _fetchKernel
           shell: /bin/bash -o pipefail
           command: |
             #set +e
             ./ubiquitous_bash.sh _fetchKernel
+          when: on_success
       #- run:
           #name: _build_cloud
           #shell: /bin/bash -o pipefail
           #command: |
             ##set +e
             #./ubiquitous_bash.sh _build_cloud
+          #when: on_success
       - run:
           name: _export_cloud
           shell: /bin/bash -o pipefail
           command: |
             #set +e
             ./ubiquitous_bash.sh _export_cloud
+          when: on_success
 
   test:
     machine:
