--- a/.github/workflows/build-buildJet.yml
+++ b/.github/workflows/build-buildJet.yml
@@ -1,5 +1,5 @@
 
-name: build
+name: build-buildJet
 on:
   workflow_dispatch:
   # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
