--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,8 @@ workflows:
   regular:
     triggers:
       - schedule:
-          cron: '5 1 * * 6,2,4'
+          #cron: '5 1 * * 6,2,4'
+          cron: '5 1 * * 6'
           filters:
             branches:
               only:
