--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
   schedule:
-    - cron: '5 1 * * 6'
+    #- cron: '5 1 * * 6'
     - cron: '5 1 * * 2,4'
 
 # https://docs.github.com/en/actions/using-jobs/using-concurrency
