--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,20 +3,24 @@ version: 0.2
 # https://docs.aws.amazon.com/codebuild/latest/userguide/getting-started-cli-create-build-spec.html
 # You cannot change the spelling of these build phase names, and you cannot create more build phase names.
 
-#env:
+
+# https://docs.aws.amazon.com/codebuild/latest/userguide/build-spec-ref.html
+# 'strongly discourage the storing of sensitive values, especially AWS access key IDs and secret access keys, in environment variables' 'recommend that you use parameter-store or secrets-manager mapping instead'
+# 'must add the ssm:GetParameters action to your CodeBuild service role'
+# 
+
+env:
   #variables:
      # key: "value"
      # key: "value"
   #parameter-store:
-     # key: "value"
-     # key: "value"
-  #secrets-manager:
-     # key: secret-id:json-key:version-stage:version-id
-     # key: secret-id:json-key:version-stage:version-id
+     # rclone_limited_conf_base64: "rclone_limited_conf_base64"
+  secrets-manager:
+     key: rclone_limited_conf_base64
   #exported-variables:
      # - variable
      # - variable
-  #git-credential-helper: yes
+  git-credential-helper: yes
 #batch:
   #fast-fail: true
   #build-list:
