--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,22 +6,34 @@ trigger: none
 
 pool:
   vmImage: ubuntu-latest
-jobs:
-- job: build_lts
-  steps:
-  - bash: ./ubiquitous_bash.sh _prepare_rclone_limited_file
-  - bash: ./_getMinimal_cloud
-  - bash: ./_build_cloud_prepare
-  - bash: ./_build_cloud_lts
-  - bash: ./_export_cloud_lts
-  - bash: ./_upload_cloud_lts
 
-- job: build_mainline
+
+
+jobs:
+
+- job: build
   steps:
   - bash: ./ubiquitous_bash.sh _prepare_rclone_limited_file
   - bash: ./_getMinimal_cloud
-  - bash: ./_build_cloud_prepare
-  - bash: ./_build_cloud_mainline
-  - bash: ./_export_cloud_mainline
-  - bash: ./_upload_cloud_mainline
+  - bash: ./_build_cloud
+  - bash: ./_export_cloud
+  - bash: ./_upload_cloud
+
+#- job: build_lts
+  #steps:
+  #- bash: ./ubiquitous_bash.sh _prepare_rclone_limited_file
+  #- bash: ./_getMinimal_cloud
+  #- bash: ./_build_cloud_prepare
+  #- bash: ./_build_cloud_lts
+  #- bash: ./_export_cloud_lts
+  #- bash: ./_upload_cloud_lts
+
+#- job: build_mainline
+  #steps:
+  #- bash: ./ubiquitous_bash.sh _prepare_rclone_limited_file
+  #- bash: ./_getMinimal_cloud
+  #- bash: ./_build_cloud_prepare
+  #- bash: ./_build_cloud_mainline
+  #- bash: ./_export_cloud_mainline
+  #- bash: ./_upload_cloud_mainline
 
