--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,8 @@ trigger: none
 #- main
 
 pool:
-  vmImage: ubuntu-latest
-  #name: local
+  #vmImage: ubuntu-latest
+  name: Default
 
 #steps:
   #- bash: ./ubiquitous_bash.sh _prepare_rclone_limited_file
