--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,8 @@ jobs:
       displayName: write! secrets
     - bash: |
         set +e
-        ls /rclone.conf
+        du -sh /rclone.conf
+        ls -la
         ./ubiquitous_bash.sh _prepare_rclone_limited_file
         ./_getMinimal_cloud
       displayName: _getMinimal_cloud
