--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,8 @@ pool:
   name: Default
 
 # Untested.
-#variables:
-#- rclone_limited_conf_base64: $(rclone_limited_conf_base64)
+variables:
+- rclone_limited_conf_base64: $(rclone_limited_conf_base64)
 
 
 jobs:
@@ -19,56 +19,45 @@ jobs:
 - job: build_lts
   steps:
     - bash: |
-        set +e
         echo "$rclone_limited_conf_base64" | base64 -d | sudo -n tee /rclone.conf > /dev/null
       displayName: write! secrets
-      env:
-        rclone_limited_conf_base64: $(rclone_limited_conf_base64)
+      #env:
+        #rclone_limited_conf_base64: $(rclone_limited_conf_base64)
     - bash: |
-        set +e
-        ./ubiquitous_bash.sh _setupUbiquitous
-        echo test
         ./ubiquitous_bash.sh _prepare_rclone_limited_file
-        ls -la ..
-        ./_getMinimal_cloud
+        ./ubiquitous_bash.sh _getMinimal_cloud
       displayName: _getMinimal_cloud
     - bash: |
-        set +e
-        ./_build_cloud_prepare
-        ./_build_cloud_lts
+        ./ubiquitous_bash.sh _build_cloud_prepare
+        ./ubiquitous_bash.sh _build_cloud_lts
       displayName: _build_cloud_lts
     - bash: |
-        set +e
-        ./_export_cloud_lts
+        ./ubiquitous_bash.sh _export_cloud_lts
       displayName: _export_cloud_lts
     - bash: |
-        set +e
-        ./_upload_cloud_lts
+        ./ubiquitous_bash.sh _upload_cloud_lts
       displayName: _upload_cloud_lts
 
 - job: build_mainline
   steps:
     - bash: |
-        set +e
-        echo $(rclone_limited_conf_base64) | base64 -d | sudo -n tee /rclone.conf > /dev/null
+        echo "$rclone_limited_conf_base64" | base64 -d | sudo -n tee /rclone.conf > /dev/null
       displayName: write! secrets
+      #env:
+        #rclone_limited_conf_base64: $(rclone_limited_conf_base64)
     - bash: |
-        set +e
         ./ubiquitous_bash.sh _prepare_rclone_limited_file
-        ./_getMinimal_cloud
+        ./ubiquitous_bash.sh _getMinimal_cloud
       displayName: _getMinimal_cloud
     - bash: |
-        set +e
-        ./_build_cloud_prepare
-        ./_build_cloud_mainline
+        ./ubiquitous_bash.sh _build_cloud_prepare
+        ./ubiquitous_bash.sh _build_cloud_mainline
       displayName: _build_cloud_mainline
     - bash: |
-        set +e
-        ./_export_cloud_mainline
+        ./ubiquitous_bash.sh _export_cloud_mainline
       displayName: _export_cloud_mainline
     - bash: |
-        set +e
-        ./_upload_cloud_mainline
+        ./ubiquitous_bash.sh _upload_cloud_mainline
       displayName: _upload_cloud_mainline
 
 
