--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,9 @@ on:
   # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
   schedule:
     #- cron: '5 1 * * 6'
-    - cron: '5 1 * * 2,4'
+    #- cron: '5 1 * * 2,4'
+    #- cron: '5 1 * * 2'
+    - cron: '5 1 * * 4'
 
 # https://docs.github.com/en/actions/using-jobs/using-concurrency
 concurrency:
