--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,13 +22,6 @@ jobs:
     #runs-on: buildjet-64vcpu-ubuntu-2004
     steps:
     - uses: actions/checkout@v2
-    - name: write! secrets
-      shell: bash
-      run: |
-        ./ubiquitous_bash.sh _prepare_rclone_limited_file
-      env:
-        rclone_limited_conf_base64: ${{ secrets.rclone_limited_conf_base64 }}
-      timeout-minutes: 5
     - name: _getMinimal_cloud
       shell: bash
       run: |
@@ -45,11 +38,14 @@ jobs:
       run: |
         ./ubiquitous_bash.sh _export_cloud_lts
       timeout-minutes: 90
-    - name: rclone_lts
-      shell: bash
-      timeout-minutes: 90
-      run: |
-        rclone --progress --config /rclone.conf copy ./_local/_export/linux-lts-amd64-debian.tar.gz distLLC_build_mirage335KernelBuild:
+    - name: release! linux-lts-amd64-debian
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: build-${{ github.run_id }}-${{ github.run_attempt }}
+        name: build
+        files: |
+          /linux-lts-amd64-debian.tar.gz
+      timeout-minutes: 45
   build_mainline:
     runs-on: ubuntu-latest
     #runs-on: ubuntu-20.04
@@ -57,13 +53,6 @@ jobs:
     #runs-on: buildjet-64vcpu-ubuntu-2004
     steps:
     - uses: actions/checkout@v2
-    - name: write! secrets
-      shell: bash
-      run: |
-        ./ubiquitous_bash.sh _prepare_rclone_limited_file
-      env:
-        rclone_limited_conf_base64: ${{ secrets.rclone_limited_conf_base64 }}
-      timeout-minutes: 5
     - name: _getMinimal_cloud
       shell: bash
       run: |
@@ -94,11 +83,14 @@ jobs:
       with:
         limit-access-to-actor: true
       timeout-minutes: 5
-    - name: rclone_mainline
-      shell: bash
-      timeout-minutes: 90
-      run: |
-        rclone --progress --config /rclone.conf copy ./_local/_export/linux-mainline-amd64-debian.tar.gz distLLC_build_mirage335KernelBuild:
+    - name: release! linux-lts-amd64-debian
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: build-${{ github.run_id }}-${{ github.run_attempt }}
+        name: build
+        files: |
+          /linux-lts-amd64-debian.tar.gz
+      timeout-minutes: 45
 
 
 
